# tool-r0.001

./: .gitignore  Phases.md  README.md  Tool-R0-Summarised.md  Tool-R0.md  ToolRL-Implementation-Notes.md  pyproject.toml  pyrightconfig.json
src/tool_r0/: config.py  loop.py  main.py
src/tool_r0/agents/: generator.py  parser.py  solver.py
src/tool_r0/data/: models.py  pool.py
src/tool_r0/eval/: bfcl.py  runner.py  synthetic.py
src/tool_r0/rewards/: accuracy.py  curriculum.py  format.py  validity.py
src/tool_r0/tools/: builtins.py  registry.py  schema.py
src/tool_r0/training/: grpo.py
tests/integration/: test_pipeline.py
tests/unit/: test_accuracy_reward.py  test_curriculum_reward.py  test_format_reward.py  test_parser.py  test_pool.py  test_registry.py  test_validity_reward.py
